adds API key for Giphy

--- a/credentials.js.config
+++ b/credentials.js.config
@@ -1,5 +1,6 @@
 apiKeys = {
     music: 'youtube API key',
     images: 'Image API key',
-    news: 'News API key'
+    news: 'News API key',
+    gifs: 'GIF API key'
 }
